--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,17 @@
         android:theme="@style/Theme.SoulSync"
         tools:targetApi="31">
         <activity
-            android:name=".LogInActivity"
-            android:exported="true" >
+            android:name=".activities.VideoPlayActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.UpdateProfile"
+            android:exported="false" />
+        <activity
+            android:name=".activities.AddJournal"
+            android:exported="false" />
+        <activity
+            android:name=".activities.LogInActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,13 +33,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SignUp"
+            android:name=".activities.SignUp"
             android:exported="false" />
         <activity
-            android:name=".HomeActivity"
-            android:exported="false"/>
+            android:name=".activities.HomeActivity"
+            android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="false" />
     </application>
 
